Closed
Bug 243840
Opened 21 years ago
Closed 20 years ago
Deleting a bookmark in a folder causes bookmark manager column to resize
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.0
People
(Reporter: tenbrook, Assigned: sfraser_bugs)
References
Details
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8a) Gecko/20040516 Camino/0.7+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8a) Gecko/20040516 Camino/0.7+
When you begin a bookmark manager session by adjusting a column width (e.g.,
make the first columm wider to see the entire title), a bookmark deletion will
resize the column to the width at the beginning of the session.
Reproducible: Always
Steps to Reproduce:
1.Select "Bookmarks...Show all bookmarks"
2.Widen the first column, "Bookmarks"
3.Select a bookmark and hit the "delete" key.
Actual Results:
"Bookmark" column snaps back to prior width.
Expected Results:
The "bookmark" column should retain the current width.
Comment 3•21 years ago
|
||
WFM with 20040516 0.8b, 10.3.3.
Reporter, what version is your OS?
| Reporter | ||
Comment 4•21 years ago
|
||
Reported against 10.3.3, trunk build 20040516
| Reporter | ||
Comment 5•21 years ago
|
||
Now I can't reproduce with either 2004051808 (v0.7+), or 20040516 build. It was
doing it consistently on 5/17. Grrrr.
WFM.
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago
Resolution: --- → WORKSFORME
Comment 6•21 years ago
|
||
*** Bug 244112 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 7•21 years ago
|
||
Reopened based on dup in Comment 6. I'll try to provide a useful testcase. It
may require a clean profile to get the right initial conditions for the columns.
Status: RESOLVED → UNCONFIRMED
Resolution: WORKSFORME → ---
| Reporter | ||
Comment 8•21 years ago
|
||
Howard, your bug 244112 was submitted against build 20021104 Chimera/0.6. Could
you retest with the latest nightly and let us know what steps are needed to
reproduce the bug?
| Reporter | ||
Comment 9•21 years ago
|
||
Another set of steps tested on 2004051908 trunk with clean default profile and
my personal profile:
1) Open Bookmark Manager
2) Open disclosure triangle to a bookmark subfolder
3) Reposition leftmost column width (the border separating the "Bookmarks" and
"URL" columns). In this case I narrowed the column.
4) Delete a bookmark in the disclosed bookmark folder; column snaps back.
Comment 10•21 years ago
|
||
I will confrim this, the trick is to make sure you do delete a bookmark and
resize within a folder.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 11•21 years ago
|
||
(In reply to comment #10)
> I will confrim this, the trick is to make sure you do delete a bookmark and
> resize within a folder.
2004082512 (v0.8.1): Still occuring as described with OS 10.2.8. I widened the
column, did the deletion, and the column snapped back after deletion.
| Assignee | ||
Comment 12•21 years ago
|
||
This might be NSOutlineView behavior.
Summary: Deleting a bookmark causes bookmark manager column to resize → Deleting a bookmark in a folder causes bookmark manager column to resize
Comment 13•21 years ago
|
||
the column width also changes *sometimes* when opening and closing folders.
doesn't always happen. crazyness.
Comment 14•21 years ago
|
||
This would be nice to solve, but I don't think it is an 0.9 blocker. Moving to 1.0.
Target Milestone: Camino0.9 → Camino1.0
| Assignee | ||
Updated•20 years ago
|
Assignee: pinkerton → sfraser_bugs
| Assignee | ||
Comment 15•20 years ago
|
||
Fixed.
Status: NEW → RESOLVED
Closed: 21 years ago → 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•