Fix bug 243840: don't resize columsn in the bookmarks/history when expanding items.